--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -52,8 +52,12 @@
             >QSL Map <!--// i class="fa-solid fa-location-dot"></i
           //--></a>
         </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('billing.notification_settings') }}"
+              >Alerts</a>
+          </li>
           {% if config.get('BILLING_UI_ENABLED', False) %}
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('billing.overview') }}">Billing</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('billing.overview') }}">Notifications</a></li>
           {% endif %}
         {% endif %}
         <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
