--- a/app/templates/notification_settings.html
+++ b/app/templates/notification_settings.html
@@ -94,7 +94,7 @@
       if (!("serviceWorker" in navigator)) {
         throw new Error("Service workers are not supported in this browser.");
       }
-      return navigator.serviceWorker.register("/qsl-digest-sw.js");
+      return navigator.serviceWorker.register("/qsl-digest-sw.js", { scope: "/notifications/" });
     }
 
     async function subscribePush() {
